# mlp-native-addon

./: .gitignore  CMakeLists.txt  index.js  package-lock.json  package.json
cppsrc/: main.cpp
cppsrc/Samples/: classexample.cpp
lib/: index.d.ts  index.js
src/: LICENSE.txt  main.cpp
src/bindings/: MLP.cpp  MLP.h  TrainingSample.cpp  TrainingSample.h  classexample.cpp  classexample.h  functionexample.h  test.h
src/lib/: Layer.h  MLP.cpp  MLP.h  Node.h  Sample.h  Utils.h
